--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf build; webpack",
+    "build": "rm -rf build; webpack --mode='development'",
     "dev": "serve -l 3000"
   },
   "keywords": [],
@@ -20,7 +20,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@sendbird/uikit-react": "^3.6.3",
+    "@sendbird/uikit-react": "^3.6.4-rc-1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
